src/plugins/multimedia/ffmpeg/qffmpeg.cpp
@@ -11,6 +11,7 @@
 #include <vector>
 #include <array>
 #include <optional>
+#include <unordered_set>
 
 extern "C" {
 #include <libavutil/pixdesc.h>
@@ -21,7 +22,19 @@ extern "C" {
 #endif
 }
 
+#ifdef Q_OS_ANDROID
+#include <QtCore/qjniobject.h>
+#include <QtCore/qjniarray.h>
+#include <QtCore/qjnitypes.h>
+#endif
+
 QT_BEGIN_NAMESPACE
+
+#ifdef Q_OS_ANDROID
+Q_DECLARE_JNI_CLASS(QtVideoDeviceManager,
+                    "org/qtproject/qt/android/multimedia/QtVideoDeviceManager");
+Q_DECLARE_JNI_CLASS(String, "java/lang/String");
+#endif
 
 static Q_LOGGING_CATEGORY(qLcFFmpegUtils, "qt.multimedia.ffmpeg.utils");
 
@@ -171,7 +184,8 @@ void dumpCodecInfo(const AVCodec *codec)
     }
 }
 
-bool isCodecValid(const AVCodec *codec, const std::vector<AVHWDeviceType> &availableHwDeviceTypes)
+bool isCodecValid(const AVCodec *codec, const std::vector<AVHWDeviceType> &availableHwDeviceTypes,
+                  const std::optional<std::unordered_set<AVCodecID>> &codecAvailableOnDevice)
 {
     if (codec->type != AVMEDIA_TYPE_VIDEO)
         return true;
@@ -192,8 +206,41 @@ bool isCodecValid(const AVCodec *codec, const std::vector<AVHWDeviceType> &avail
         return hasAVFormat(pixFmts, pixelFormatForHwDevice(type));
     };
 
+    if (codecAvailableOnDevice && codecAvailableOnDevice->count(codec->id) == 0)
+        return false;
+
     return std::any_of(availableHwDeviceTypes.begin(), availableHwDeviceTypes.end(),
                        checkDeviceType);
+}
+
+std::optional<std::unordered_set<AVCodecID>> availableHWCodecs(const CodecStorageType type)
+{
+#ifdef Q_OS_ANDROID
+    std::unordered_set<AVCodecID> availabeCodecs;
+
+    auto getCodecId = [] (const QString& codecName) {
+        if (codecName == QStringView("3gpp")) return AV_CODEC_ID_H263;
+        if (codecName == QStringView("avc")) return AV_CODEC_ID_H264;
+        if (codecName == QStringView("hevc")) return AV_CODEC_ID_HEVC;
+        if (codecName == QStringView("mp4v-es")) return AV_CODEC_ID_MPEG4;
+        if (codecName == QStringView("x-vnd.on2.vp8")) return AV_CODEC_ID_VP8;
+        if (codecName == QStringView("x-vnd.on2.vp9")) return AV_CODEC_ID_VP9;
+        return AV_CODEC_ID_NONE;
+    };
+
+    const QJniObject jniCodecs =
+            QtJniTypes::QtVideoDeviceManager::callStaticMethod<QtJniTypes::String[]>(
+                    type == ENCODERS ? "getHWVideoEncoders" : "getHWVideoDecoders");
+
+    QJniArray<QtJniTypes::String> arrCodecs(jniCodecs.object<jobjectArray>());
+    for (int i = 0; i < arrCodecs.size(); ++i) {
+        availabeCodecs.insert(getCodecId(arrCodecs.at(i).toString()));
+    }
+    return availabeCodecs;
+#else
+    Q_UNUSED(type);
+    return {};
+#endif
 }
 
 const CodecsStorage &codecsStorage(CodecStorageType codecsType)
@@ -201,6 +248,8 @@ const CodecsStorage &codecsStorage(CodecStorageType codecsType)
     static const auto &storages = []() {
         std::array<CodecsStorage, CODEC_STORAGE_TYPE_COUNT> result;
         void *opaque = nullptr;
+        const auto platformHwEncoders = availableHWCodecs(ENCODERS);
+        const auto platformHwDecoders = availableHWCodecs(DECODERS);
 
         while (auto codec = av_codec_iterate(&opaque)) {
             // TODO: to be investigated
@@ -219,7 +268,7 @@ const CodecsStorage &codecsStorage(CodecStorageType codecsType)
             }
 
             if (av_codec_is_decoder(codec)) {
-                if (isCodecValid(codec, HWAccel::decodingDeviceTypes()))
+                if (isCodecValid(codec, HWAccel::decodingDeviceTypes(), platformHwDecoders))
                     result[DECODERS].emplace_back(codec);
                 else
                     qCDebug(qLcFFmpegUtils) << "Skip decoder" << codec->name
@@ -227,7 +276,7 @@ const CodecsStorage &codecsStorage(CodecStorageType codecsType)
             }
 
             if (av_codec_is_encoder(codec)) {
-                if (isCodecValid(codec, HWAccel::encodingDeviceTypes()))
+                if (isCodecValid(codec, HWAccel::encodingDeviceTypes(), platformHwEncoders))
                     result[ENCODERS].emplace_back(codec);
                 else
                     qCDebug(qLcFFmpegUtils) << "Skip encoder" << codec->name
